--- a/namespaces/00_data-namespace.yml
+++ b/namespaces/00_data-namespace.yml
@@ -1,22 +1,29 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: data-namespace
+
+---
+
 apiVersion: v1            
 kind: ResourceQuota       
 metadata:                 
   name: quota
-  namespace: admin-namespace       
+  namespace: data-namespace         
 spec:                     
   hard:                   
     limits.cpu: 500m      
-    limits.memory: 256Mi  
+    limits.memory: 1Gi  
     requests.cpu: 250m    
-    requests.memory: 128Mi
+    requests.memory: 1Gi
                           
 ---                     
 
-apiVersion: v1                    
+apiVersion: v1                
 kind: LimitRange        
 metadata:               
   name: quota
-  namespace: admin-namespace           
+  namespace: data-namespace       
 spec:                   
   limits:               
     - type: "Container" 
