--- a/namespaces/10_web-namespace.yml
+++ b/namespaces/10_web-namespace.yml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: web-namespace
+
+--- 
+
 apiVersion: v1            
 kind: ResourceQuota       
 metadata:                 
